Fixed issue with ProfileMenuBar visibility

--- a/todo/src/Styles/NavbarCSS.css
+++ b/todo/src/Styles/NavbarCSS.css
@@ -66,7 +66,7 @@ header .nav-btn {
         gap: 1.5rem;
         background-color: var(--mainColor);
         transition: 0.5s;
-        transform: translateX(-200vh)
+        transform: translateX(-200vh);
     }
 
     header .responsive_nav{
