--- a/todo/src/Styles/profile-menu.css
+++ b/todo/src/Styles/profile-menu.css
@@ -6,10 +6,9 @@
 
 
 @media only screen and (max-width: 1200px){
-    #profile {
+       .profile nav {
         position: fixed;
         bottom: 0;
-        right: 8px;
         height: 680px;
         width: 300px;
         display: flex;
@@ -18,12 +17,15 @@
         justify-content: center;
         gap: 1.5rem;
         background-color: #1e1e6d;
-        transition: 0.5s;
-        transform: translateX(200vh)
+        transition: 0.5s ;
+        transform: translateX(200vh);
+        
        }
        
 
-    .responsive_nav{
-        transform: none;
+       .profile .responsive_profilenav{
+        transform: translateX(68vh);
+        
     }   
+    
 }
